# minamo

./: CMakeLists.txt  LICENSE  scene_test.cpp  test2.cpp  text_sample.cpp
include/: minamo.hpp
include/minamo/: attribute.hpp  coord_method.hpp  coord_method.inl  count_log.hpp  derived_kernel.hpp  draw_count.hpp  drawer.hpp  float.hpp  float.inl  float_kernel.hpp  float_kernel.inl  forward.hpp  glm_type.hpp  inheritance.hpp  int.hpp  int.inl  int_kernel.hpp  int_kernel.inl  kernel.hpp  rgba_color.hpp  shader.hpp  simple_color_method.hpp  simple_color_method.inl  uint.hpp  uint.inl  uint_kernel.hpp  uint_kernel.inl  uniform.hpp  uniform.inl  unordered_map_drawer.hpp  unordered_map_drawer.inl  variable.hpp
include/minamo/drawer/: drawer.hpp  even_manifold.hpp  even_manifold.inl  standard.hpp  standard.inl
include/minamo/extension/: position.hpp  test.cpp  tet  typewriter.hpp  vert_buffer_2d.hpp  vert_buffer_2d.inl  vert_buffer_2d_array.hpp  vert_buffer_2d_array.inl
include/minamo/method/: basic_c1.hpp  basic_c1.inl  basic_p1.hpp  basic_p1.inl  mold_c1u1.hpp  mold_c1u1.inl  uniform_c0.hpp  uniform_c0.inl  uniform_mold_c0u1.hpp  uniform_mold_c0u1.inl
include/minamo/preset/: .text_store.inl.swp  text_store.hpp  text_store.inl
include/minamo/rect/: color_drawer.hpp  rect.hpp  region.hpp
include/minamo/system/: scene.hpp
src/: count_log.cpp  draw_count.cpp  drawer.cpp  kernel.cpp  rgba_color.cpp  shader.cpp  typewriter.cpp
src/rect/: color_drawer.cpp  rect.cpp  region.cpp
src/system/: scene.cpp
